[gd_scene load_steps=18 format=3 uid="uid://doen183wvacci"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_fhrga"]
[ext_resource type="Texture2D" uid="uid://xvxy7mjjp0lr" path="res://Assets/Player/Bat.png" id="4_8oqwi"]
[ext_resource type="Texture2D" uid="uid://bewblwm7e2gnv" path="res://Assets/Player/Fly.png" id="5_2ifts"]
[ext_resource type="Texture2D" uid="uid://b8n28gwrant76" path="res://Assets/Player/Death.png" id="5_anvgq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4oow0"]
radius = 12.0

[sub_resource type="AtlasTexture" id="AtlasTexture_x4rjw"]
atlas = ExtResource("5_anvgq")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vn2xl"]
atlas = ExtResource("5_anvgq")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7lot"]
atlas = ExtResource("5_anvgq")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yncuv"]
atlas = ExtResource("5_anvgq")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_26coi"]
atlas = ExtResource("5_anvgq")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3fv1"]
atlas = ExtResource("5_anvgq")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tgigw"]
atlas = ExtResource("5_anvgq")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_26sc6"]
atlas = ExtResource("5_2ifts")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4qem"]
atlas = ExtResource("5_2ifts")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kiuw"]
atlas = ExtResource("5_2ifts")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0y15"]
atlas = ExtResource("5_2ifts")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_o63ab"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4rjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vn2xl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7lot")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yncuv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_26coi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3fv1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tgigw")
}],
"loop": false,
"name": &"Death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_26sc6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4qem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kiuw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0y15")
}],
"loop": true,
"name": &"Flying",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_8oqwi")
}],
"loop": false,
"name": &"Idle",
"speed": 1.0
}]

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
motion_mode = 1
platform_on_leave = 1
script = ExtResource("1_fhrga")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_4oow0")

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_o63ab")
animation = &"Flying"
autoplay = "Flying"
offset = Vector2(-3, -1)

[node name="Animation" type="Timer" parent="."]
one_shot = true

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="JumpTimer" to="." method="_on_jump_timer_timeout"]
